apps/ljwx-shiti/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ljwx-shiti-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    cert-manager.io/cluster-issuer: dnspod-letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: shiti.lingjingwanxiang.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ljwx-shiti
            port:
              number: 80
  tls:
  - hosts:
    - shiti.lingjingwanxiang.cn
    secretName: shiti-lingjingwanxiang-cn-tls
